welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: Pattern variables must start with a lower-case letter. (SLS 8.1.1.)
	var (Int:c=0)
                ^close10:3: error: '=' expected but ')' found.
	if ( Math.abs(10-a) < Math.abs(10-b) ) {
                                             ^close10:10: error: illegal start of simple expression
	}
        ^